syntax = "proto3";
import "messages.proto";

package pantheon;

service Frey {
  rpc RequestRegistration(Auth_RequestRegistration_Payload) returns (Auth_RequestRegistration_Response);
  rpc ApproveRegistration(Auth_ApproveRegistration_Payload) returns (Auth_ApproveRegistration_Response);
  rpc Authorize(Auth_Authorize_Payload) returns (Auth_Authorize_Response);
  rpc QuickAuthorize(Auth_QuickAuthorize_Payload) returns (Auth_QuickAuthorize_Response);
  rpc Me(Auth_Me_Payload) returns (Auth_Me_Response);
  rpc ChangePassword(Auth_ChangePassword_Payload) returns (Auth_ChangePassword_Response);
  rpc RequestResetPassword(Auth_RequestResetPassword_Payload) returns (Auth_RequestResetPassword_Response);
  rpc ApproveResetPassword(Auth_ApproveResetPassword_Payload) returns (Auth_ApproveResetPassword_Response);
  rpc GetAccessRules(Access_GetAccessRules_Payload) returns (Access_GetAccessRules_Response);
  rpc GetRuleValue(Access_GetRuleValue_Payload) returns (Access_GetRuleValue_Response);
  rpc UpdatePersonalInfo(Persons_UpdatePersonalInfo_Payload) returns (Persons_UpdatePersonalInfo_Response);
  rpc GetPersonalInfo(Persons_GetPersonalInfo_Payload) returns (Persons_GetPersonalInfo_Response);
  rpc FindByTenhouIds(Persons_FindByTenhouIds_Payload) returns (Persons_FindByTenhouIds_Response);
  rpc FindByTitle(Persons_FindByTitle_Payload) returns (Persons_FindByTitle_Response);
  rpc GetGroups(Persons_GetGroups_Payload) returns (Persons_GetGroups_Response);
  rpc GetEventAdmins(Access_GetEventAdmins_Payload) returns (Access_GetEventAdmins_Response);

  // admin
  rpc GetSuperadminFlag(Access_GetSuperadminFlag_Payload) returns (Access_GetSuperadminFlag_Response);
  rpc GetOwnedEventIds(Access_GetOwnedEventIds_Payload) returns (Access_GetOwnedEventIds_Response);
  rpc GetRulesList(Access_GetRulesList_Payload) returns (Access_GetRulesList_Response);
  rpc GetAllEventRules(Access_GetAllEventRules_Payload) returns (Access_GetAllEventRules_Response);
  rpc GetPersonAccess(Access_GetPersonAccess_Payload) returns (Access_GetPersonAccess_Response);
  rpc GetGroupAccess(Access_GetGroupAccess_Payload) returns (Access_GetGroupAccess_Response);
  rpc GetAllPersonAccess(Access_GetAllPersonAccess_Payload) returns (Access_GetAllPersonAccess_Response);
  rpc GetAllGroupAccess(Access_GetAllGroupAccess_Payload) returns (Access_GetAllGroupAccess_Response);
  rpc AddRuleForPerson(Access_AddRuleForPerson_Payload) returns (Access_AddRuleForPerson_Response);
  rpc AddRuleForGroup(Access_AddRuleForGroup_Payload) returns (Access_AddRuleForGroup_Response);
  rpc UpdateRuleForPerson(Access_UpdateRuleForPerson_Payload) returns (Access_UpdateRuleForPerson_Response);
  rpc UpdateRuleForGroup(Access_UpdateRuleForGroup_Payload) returns (Access_UpdateRuleForGroup_Response);
  rpc DeleteRuleForPerson(Access_DeleteRuleForPerson_Payload) returns (Access_DeleteRuleForPerson_Response);
  rpc DeleteRuleForGroup(Access_DeleteRuleForGroup_Payload) returns (Access_DeleteRuleForGroup_Response);
  rpc ClearAccessCache(Access_ClearAccessCache_Payload) returns (Access_ClearAccessCache_Response);
  rpc CreateAccount(Persons_CreateAccount_Payload) returns (Persons_CreateAccount_Response);
  rpc CreateGroup(Persons_CreateGroup_Payload) returns (Persons_CreateGroup_Response);
  rpc UpdateGroup(Persons_UpdateGroup_Payload) returns (Persons_UpdateGroup_Response);
  rpc DeleteGroup(Persons_DeleteGroup_Payload) returns (Persons_DeleteGroup_Response);
  rpc AddPersonToGroup(Persons_AddPersonToGroup_Payload) returns (Persons_AddPersonToGroup_Response);
  rpc RemovePersonFromGroup(Persons_RemovePersonFromGroup_Payload) returns (Persons_RemovePersonFromGroup_Response);
  rpc GetPersonsOfGroup(Persons_GetPersonsOfGroup_Payload) returns (Persons_GetPersonsOfGroup_Response);
  rpc GetGroupsOfPerson(Persons_GetGroupsOfPerson_Payload) returns (Persons_GetGroupsOfPerson_Response);

  // superadmin: this should be covered with some bootstrap authenthication, TODO
  rpc AddSystemWideRuleForPerson(Access_AddSystemWideRuleForPerson_Payload) returns (Access_AddSystemWideRuleForPerson_Response);
  rpc AddSystemWideRuleForGroup(Access_AddSystemWideRuleForGroup_Payload) returns (Access_AddSystemWideRuleForGroup_Response);
}
